# codey

./: .gitignore  Cargo.toml  README.md  components.json  index.html  overlay-preview.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vite.overlay.config.ts
.cargo/: config.toml
.github/workflows/: build-desktop.yml
backend/: Cargo.toml  build.rs
backend/icons/: Codey.icns
backend/src/: cc_switch.rs  cdp.rs  codex_config.rs  codex_startup_patch.rs  commands.rs  config.rs  launcher.rs  lib.rs  main.rs  maintenance_lock.rs  message_delete.rs  model_catalog.rs  pending_approval.rs  pet_slim_patch.rs  plugin_marketplace.rs  process_cleanup.rs  process_tree.rs  provider_lease.rs  provider_models.rs  session_delete.rs  session_index_cleanup.rs  session_metadata.rs  session_transfer.rs  startup_maintenance.rs  trace_log_guard.rs  trace_log_stats.rs  update_helper.rs  webhook.rs
public/: codey-bridge.js  codey-inject.js  fast-mode-fix.js  model-whitelist-inject.js  pet-control-shield.js  plugin-marketplace-fix.js  renderer-inject.js  security-warning-shield.js  voice-control-shield.js
scripts/: build-web.mjs  build.mjs  generate-update-manifest.mjs  release.mjs
scripts/installer/windows/: Codey.nsi
src/: App.tsx  App.types.ts  AppDialogs.tsx  AppSections.tsx  TraceLogModule.tsx  api.ts  main.tsx  overlay-preview.ts  overlay.css  overlay.tsx  preview.tsx  previewModels.ts  previewTraceLogStats.ts  styles.css
src/components/magicui/: border-beam.tsx  controls.tsx  dialog.tsx  index.ts  magic-card.tsx  shimmer-button.tsx
src/components/semi/: index.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  index.ts  input.tsx  switch.tsx
tests/: codex-renderer-patch.test.mjs  codex-runtime-optimization-patch.test.mjs  codey-model-whitelist-inject.test.mjs  completion-tracking.test.mjs  fast-context-tools.test.mjs  fast-mode-fix.test.mjs  gpu-launch-arguments.test.mjs  injection-performance.test.mjs  injection-status.test.mjs  message-selection-style.test.mjs  model-whitelist-filter.test.mjs  native-model-controls-patch.test.mjs  pet-control-shield.test.mjs  plugin-marketplace-status.test.mjs  process-cleanup.test.mjs  security-warning-shield.test.mjs  session-delete-ui.test.mjs  settings-button.test.mjs  settings-overlay-dismissal.test.mjs  settings-overlay-lazy-loader.test.mjs  sidebar-relative-time.test.mjs  sidebar-status-style.test.mjs  subagent-optimization.test.mjs  update-manifest.test.mjs  voice-control-shield.test.mjs  voice-startup-patch.test.mjs  windows-console-background.test.mjs  windows-wmi-patch.test.mjs
