[package]
name = "codey"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codey_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "codey"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
codex-plus-core = { path = "../vendor/CodexPlusPlus/crates/codex-plus-core" }
codex-plus-data = { path = "../vendor/CodexPlusPlus/crates/codex-plus-data" }
directories = "6"
fastctx = { git = "https://github.com/yc-duan/fastctx", rev = "64a6a45f88e65a2c0305e36673fa5e3f99d95384", default-features = false }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.26"
toml_edit = "0.22"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
